upgrade Azure SDK to a GA version matching Kubernetes
Signed-off-by: Steve Kriss <krisss@vmware.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -63,7 +63,7 @@
 
 [[constraint]]
   name = "github.com/Azure/azure-sdk-for-go"
-  version = "~11.3.0-beta"
+  version = "~19.0.0"
 
 # k8s.io/client-go v9.0 uses bca49d5b51a50dc5bb17bbf6204c711c6dbded06 (v10.14.0)
 [[constraint]]
@@ -93,15 +93,9 @@
   name = "github.com/robfig/cron"
   revision = "df38d32658d8788cd446ba74db4bb5375c4b0cb3"
 
-# TODO(1.0) this repo is a redirect to github.com/satori/go.uuid. Our
-# current version of azure-sdk-for-go references this redirect, so
-# use it so we don't get a duplicate copy of this dependency.
-# Once our azure-sdk-for-go is updated to a newer version (where
-# their dependency has changed to .../go.uuid), switch this to
-# github.com/satori/go.uuid
 [[constraint]]
-  name = "github.com/satori/uuid"
-  version = "1.1.0"
+  name = "github.com/satori/go.uuid"
+  version = "~1.2.0"
 
 [[constraint]]
   name = "github.com/spf13/afero"
