Update internal plugin code
Signed-off-by: Carlisia <carlisiac@vmware.com>

--- a/examples/minio/00-minio-deployment.yaml
+++ b/examples/minio/00-minio-deployment.yaml
@@ -66,7 +66,7 @@ spec:
   # ClusterIP is recommended for production environments.
   # Change to NodePort if needed per documentation,
   # but only if you run Minio in a test/trial environment, for example with Minikube.
-  type: NodePort
+  type: ClusterIP
   ports:
     - port: 9000
       targetPort: 9000
