--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -125,6 +125,10 @@
   name = "google.golang.org/grpc"
   version = "~v1.19.0"
 
+[[constraint]]
+  name = "github.com/joho/godotenv"
+  version = "~v1.3.0"
+
 [[override]]
   name = "golang.org/x/sys"
   branch = "master"
