--- a/Dockerfile-velero-restic-restore-helper
+++ b/Dockerfile-velero-restic-restore-helper
@@ -1,4 +1,4 @@
-# Copyright 2017 the Velero contributors.
+# Copyright 2018, 2019 the Velero contributors.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,20 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM alpine:3.8
+FROM debian:stretch-slim
 
-MAINTAINER Andy Goldstein <andy@heptio.com>
+LABEL maintainer="Steve Kriss <krisss@vmware.com>"
 
-RUN apk add --no-cache ca-certificates
-
-RUN apk add --update --no-cache bzip2 && \
-    wget --quiet https://github.com/restic/restic/releases/download/v0.9.4/restic_0.9.4_linux_amd64.bz2 && \
-    bunzip2 restic_0.9.4_linux_amd64.bz2 && \
-    mv restic_0.9.4_linux_amd64 /usr/bin/restic && \
-    chmod +x /usr/bin/restic
-
-ADD /bin/linux/amd64/velero /velero
+ADD /bin/linux/amd64/velero-restic-restore-helper .
 
 USER nobody:nobody
 
-ENTRYPOINT ["/velero"]
+ENTRYPOINT [ "/velero-restic-restore-helper" ]
