Set page title in config.yaml
If the title is not set in the config, the title is pulled from the
fork's GitHub description, which may not match upstream.

Signed-off-by: Nolan Brubaker <brubakern@vmware.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 name: velero
+title: "Velero: Backup and migrate Kubernetes applications and their persistent volumes"
 baseurl: /velero
 google_analytics: FILL_OUT
 latest: v0.11.0
