Add ability to use wildcard in includes/excludes
Use https://github.com/gobwas/glob as glob engine
Fix #373

Signed-off-by: Guilhem Lettron <guilhem@barpilot.io>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -129,6 +129,10 @@
   name = "github.com/joho/godotenv"
   version = "~v1.3.0"
 
+[[constraint]]
+  name = "github.com/gobwas/glob"
+  version = "~v0.2.3"
+
 [[override]]
   name = "golang.org/x/sys"
   branch = "master"
