--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: /velero
 google_analytics: FILL_OUT
 latest: v0.11.0
 versions:
-- v1.0.0-alpha.2
+- v1.0.0-beta.1
 - v0.11.0
 - v0.10.0
 - v0.9.0
@@ -34,10 +34,10 @@ defaults:
     version: master
     gh: https://github.com/heptio/velero/tree/master
 - scope:
-    path: v1.0.0-alpha.2
+    path: v1.0.0-beta.1
   values:
-    version: v1.0.0-alpha.2
-    gh: https:/github.com/heptio/velero/tree/v1.0.0-alpha.2
+    version: v1.0.0-beta.1
+    gh: https:/github.com/heptio/velero/tree/v1.0.0-beta.1
 - scope:
     path: v0.11.0
   values:
