update master docs site
Signed-off-by: Steve Kriss <krisss@vmware.com>

--- a/_data/master-toc.yml
+++ b/_data/master-toc.yml
@@ -48,7 +48,7 @@ toc:
   - title: Customize Velero
     subfolderitems:
       - page: Build from source
-        url: /build-from-scratch
+        url: /build-from-source
       - page: Run in any namespace
         url: /namespace
       - page: Extend
