--- a/_data/v9-toc.yml
+++ b/_data/v9-toc.yml
@@ -51,6 +51,8 @@ toc:
     subfolderitems:
       - page: Backup file format
         url: /output-file-format
+      - page: API types
+        url: /api-types
       - page: FAQ
         url: /faq
   - title: Tutorials
