--- a/_data/master-toc.yml
+++ b/_data/master-toc.yml
@@ -61,6 +61,8 @@ toc:
     subfolderitems:
       - page: Backup file format
         url: /output-file-format
+      - page: API types
+        url: /api-types
       - page: FAQ
         url: /faq
 
