change base images to ubuntu:bionic
Signed-off-by: Steve Kriss <krisss@vmware.com>

--- a/Dockerfile-fsfreeze-pause
+++ b/Dockerfile-fsfreeze-pause
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM debian:stretch-slim
+FROM ubuntu:bionic
 
 LABEL maintainer="Steve Kriss <krisss@vmware.com>"
 
