--- a/Dockerfile-velero-restic-restore-helper
+++ b/Dockerfile-velero-restic-restore-helper
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM debian:stretch-slim
+FROM ubuntu:bionic
 
 LABEL maintainer="Steve Kriss <krisss@vmware.com>"
 
