--- a/site/_config.yml
+++ b/site/_config.yml
@@ -49,10 +49,10 @@ defaults:
       gh: https://github.com/heptio/velero/tree/master
       layout: "docs"
   - scope:
-      path: docs/v1.0.0-rc.1
+      path: docs/v1.0.0
     values:
-      version: v1.0.0-rc.1
-      gh: https:/github.com/heptio/velero/tree/v1.0.0-rc.1
+      version: v1.0.0
+      gh: https:/github.com/heptio/velero/tree/v1.0.0
       layout: "docs"
   - scope:
       path: docs/v0.11.0
@@ -126,10 +126,10 @@ collections:
   - casestudies
 
 versioning: true
-latest: v0.11.0
+latest: v1.0.0
 versions:
 - master
-- v1.0.0-rc.1
+- v1.0.0
 - v0.11.0
 - v0.10.0
 - v0.9.0
