--- a/site/_data/master-toc.yml
+++ b/site/_data/master-toc.yml
@@ -28,7 +28,7 @@ toc:
       - page: Run on GCP
         url: /gcp-config
       - page: Restic Setup
-        url: /restic    
+        url: /restic
   - title: Use
     subfolderitems:
       - page: Disaster Recovery
@@ -63,4 +63,5 @@ toc:
         url: /output-file-format
       - page: FAQ
         url: /faq
-
+      - page: ZenHub
+        url: /zenhub
