--- a/site/_data/v7-1-toc.yml
+++ b/site/_data/v7-1-toc.yml
@@ -41,6 +41,8 @@ toc:
     subfolderitems:
       - page: Backup file format
         url: /output-file-format
+      - page: API types
+        url: /api-types
       - page: FAQ
         url: /faq
   - title: Tutorials
