--- a/site/_data/v7-toc.yml
+++ b/site/_data/v7-toc.yml
@@ -23,6 +23,8 @@ toc:
         url: /debugging-restores
       - page: Backup file format
         url: /output-file-format
+      - page: API types
+        url: /api-types
       - page: FAQ
         url: /faq
   - title: Customize Ark
