--- a/site/_data/v8-toc.yml
+++ b/site/_data/v8-toc.yml
@@ -43,6 +43,8 @@ toc:
     subfolderitems:
       - page: Backup file format
         url: /output-file-format
+      - page: API types
+        url: /api-types
       - page: FAQ
         url: /faq
   - title: Tutorials
