--- a/site/_config.yml
+++ b/site/_config.yml
@@ -31,6 +31,9 @@ footer_social_links:
   RSS:
     fa_icon: fa fa-rss
     url: feed.xml
+  GitHub:
+    fa_icon: fab fa-github
+    url: https://github.com/heptio/velero
 
 defaults:
   - scope:
