update README.md link to install docs, minor reorg install docs content
Signed-off-by: Steve Kriss <krisss@vmware.com>

--- a/site/_data/shortlinks.yml
+++ b/site/_data/shortlinks.yml
@@ -7,3 +7,6 @@
 - title: ZenHub
   key: zenhub
   destination: zenhub
+- title: Install Overview
+  key: install-overview
+  destination: install-overview
