Add JSON as an option for log output
Signed-off-by: Donovan Carthew <donovan.carthew@gmail.com>

--- a/examples/minio/00-minio-deployment.yaml
+++ b/examples/minio/00-minio-deployment.yaml
@@ -19,7 +19,7 @@ metadata:
   name: velero
 
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: velero
@@ -29,6 +29,9 @@ metadata:
 spec:
   strategy:
     type: Recreate
+  selector:
+    matchLabels:
+      component: minio
   template:
     metadata:
       labels:
