--- a/examples/nginx-app/base.yaml
+++ b/examples/nginx-app/base.yaml
@@ -21,13 +21,16 @@ metadata:
     app: nginx
 
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
   namespace: nginx-example
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      app: nginx
   template:
     metadata:
       labels:
