--- a/examples/nginx-app/with-pv.yaml
+++ b/examples/nginx-app/with-pv.yaml
@@ -29,7 +29,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  storageClassName: <YOUR_STORAGE_CLASS_NAME>
+  # storageClassName: <YOUR_STORAGE_CLASS_NAME>
   accessModes:
     - ReadWriteOnce
   resources:
@@ -37,13 +37,16 @@ spec:
       storage: 50Mi
 
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
   namespace: nginx-example
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: nginx
   template:
     metadata:
       labels:
