--- a/site/_data/toc-mapping.yml
+++ b/site/_data/toc-mapping.yml
@@ -3,7 +3,7 @@
 # that the navigation for older versions still work.
 
 master: master-toc
-v1.0.0: v1-0-toc
+v1.0.0: v1-0-0-toc
 v0.11.0: v011-toc
 v0.10.0: v010-toc
 v0.9.0: v9-toc
