--- a/examples/nginx-app/with-pv.yaml
+++ b/examples/nginx-app/with-pv.yaml
@@ -37,7 +37,7 @@ spec:
       storage: 50Mi
 
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
