--- a/examples/nginx-app/base.yaml
+++ b/examples/nginx-app/base.yaml
@@ -28,6 +28,9 @@ metadata:
   namespace: nginx-example
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      app: nginx
   template:
     metadata:
       labels:
