add backup/restore docs for undocumented features
Signed-off-by: Steve Kriss <krisss@vmware.com>

--- a/site/_data/master-toc.yml
+++ b/site/_data/master-toc.yml
@@ -29,6 +29,10 @@ toc:
         url: /disaster-case
       - page: Cluster migration
         url: /migration-case
+      - page: Backup reference
+        url: /backup-reference
+      - page: Restore reference
+        url: /restore-reference
   - title: Troubleshoot
     subfolderitems:
       - page: Troubleshooting
