--- a/site/_config.yml
+++ b/site/_config.yml
@@ -53,6 +53,12 @@ defaults:
       gh: https://github.com/heptio/velero/tree/master
       layout: "docs"
   - scope:
+      path: docs/v1.1.0-beta.1
+    values:
+      version: v1.1.0-beta.1
+      gh: https://github.com/heptio/velero/tree/v1.1.0-beta.1
+      layout: "docs"
+  - scope:
       path: docs/v1.0.0
     values:
       version: v1.0.0
@@ -139,6 +145,7 @@ versioning: true
 latest: v1.0.0
 versions:
 - master
+- v1.1.0-beta.1
 - v1.0.0
 - v0.11.0
 - v0.10.0
