Document process for adding VELERO_NAMESPACE
Signed-off-by: Nolan Brubaker <brubakern@vmware.com>

--- a/site/_data/master-toc.yml
+++ b/site/_data/master-toc.yml
@@ -13,6 +13,8 @@ toc:
     subfolderitems:
       - page: Overview
         url: /install-overview
+      - page: Upgrade to 1.1
+        url: /upgrade-to-1.1
       - page: Quick start with in-cluster MinIO
         url: /get-started
       - page: Run on AWS
