Add travis integration to deployment
* ensure $BRANCH is always the same value (borrowed from Sonobuoy)
* get gcloud SDK installed (borrowed from Sonobuoy)
* use deploy step to run GCR push script (borrowed from Sonobuoy)
* use gcloud's docker to do the image building/pushing
* placeholders for secure values
* rename $LATEST to $HIGHEST to more accurately reflect what it is

Signed-off-by: Nolan Brubaker <brubakern@vmware.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,23 @@ sudo: required
 services:
   - docker
 
-script: hack/ci-check.sh
+script:
+- export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+- echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, PR=$TRAVIS_PULL_REQUEST, BRANCH=$BRANCH"
+- hack/ci-check.sh
+
+# gcloud sdk is needed to upload docker images
+before_deploy:
+- if [ ! -d ${HOME}/google-cloud-sdk ]; then curl https://sdk.cloud.google.com | bash
+  /dev/stdin --disable-prompts; fi
+
+deploy:
+  -provider: script
+   skip_cleanup: true
+   script: hack/gcr-push.sh
+   on:
+     repo: heptio/velero
+     all_branches: true
+
+env:
+  secure: [encrypted value goes here]
