Add info to build on my fork
Signed-off-by: Nolan Brubaker <brubakern@vmware.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ deploy:
     skip_cleanup: true
     script: hack/gcr-push.sh
     on:
-      repo: heptio/velero
+      repo: nrb/velero
       all_branches: true
