Use gcloud's external cred helper
Signed-off-by: Nolan Brubaker <brubakern@vmware.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ script:
 before_deploy:
   - if [ ! -d ${HOME}/google-cloud-sdk ]; then curl https://sdk.cloud.google.com | bash
     /dev/stdin --disable-prompts; fi
+  - gcloud components install docker-credential-gcr
 
 deploy:
   - provider: script
