sudo remove gcloud
Signed-off-by: Nolan Brubaker <brubakern@vmware.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 
 # gcloud sdk is needed to upload docker images, but we want an updated version
 before_deploy:
-  - apt-get remove google-cloud-sdk
+  - sudo apt-get remove google-cloud-sdk
   - if [ ! -d ${HOME}/google-cloud-sdk ]; then curl https://sdk.cloud.google.com | bash
     /dev/stdin --disable-prompts; fi
 
