--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ before_deploy:
   - sudo apt-get remove google-cloud-sdk
   - if [ ! -d ${HOME}/google-cloud-sdk ]; then curl https://sdk.cloud.google.com | bash
     /dev/stdin --disable-prompts; fi
-  - ${HOME}/google-cloud-sdk/install.sh --quiet --usage-reporting false
-  - echo "$PATH"
+  - export PATH=/home/travs/google-cloud-sdk/bin:$PATH
+    echo "$PATH"
 
 deploy:
   - provider: script
