--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+dist: xenial
 language: go
 
 go:
@@ -8,4 +9,23 @@ sudo: required
 services:
   - docker
 
-script: hack/ci-check.sh
+script:
+  - export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+  - echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, PR=$TRAVIS_PULL_REQUEST, BRANCH=$BRANCH"
+  - hack/ci-check.sh
+
+# gcloud sdk is needed to upload docker images, but we want an updated version
+# Do this outside our script so that it's clearly separated in the logs
+before_deploy:
+  - sudo apt-get remove google-cloud-sdk
+  - if [ ! -d ${HOME}/google-cloud-sdk ]; then curl https://sdk.cloud.google.com | bash
+    /dev/stdin --disable-prompts; fi
+  - export PATH=${HOME}/google-cloud-sdk/bin:$PATH && echo "$PATH"
+
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: hack/gcr-push.sh
+    on:
+      repo: heptio/velero
+      all_branches: true
