Add info to run Velero locally
Signed-off-by: Carlisia <carlisia@vmware.com>

--- a/site/_data/v1-0-0-toc.yml
+++ b/site/_data/v1-0-0-toc.yml
@@ -25,6 +25,8 @@ toc:
         url: /gcp-config
       - page: Restic Setup
         url: /restic    
+      - page: Run locally
+        url: /run-locally
   - title: Use
     subfolderitems:
       - page: Disaster Recovery
