--- a/site/_data/v011-toc.yml
+++ b/site/_data/v011-toc.yml
@@ -31,6 +31,8 @@ toc:
         url: /ibm-config
       - page: Restic Setup
         url: /restic
+      - page: Run locally
+        url: /run-locally
   - title: Troubleshooting
     subfolderitems:
       - page: Troubleshooting
