--- a/site/_data/v1-1-0-toc.yml
+++ b/site/_data/v1-1-0-toc.yml
@@ -25,6 +25,8 @@ toc:
         url: /gcp-config
       - page: Restic setup
         url: /restic
+      - page: Run locally
+        url: /run-locally
   - title: Use
     subfolderitems:
       - page: Disaster recovery
