--- a/site/_data/v1-0-0-toc.yml
+++ b/site/_data/v1-0-0-toc.yml
@@ -29,10 +29,22 @@ toc:
         url: /run-locally
   - title: Use
     subfolderitems:
-      - page: Disaster Recovery
+      - page: Disaster recovery
         url: /disaster-case
       - page: Cluster migration
         url: /migration-case
+      - page: Backup reference
+        url: /backup-reference
+      - page: Restore reference
+        url: /restore-reference
+      - page: Run in any namespace
+        url: /namespace
+      - page: Extend
+        url: /extend
+      - page: Extend with plugins
+        url: /plugins
+      - page: Extend with hooks
+        url: /hooks
   - title: Troubleshoot
     subfolderitems:
       - page: Troubleshooting
@@ -43,18 +55,12 @@ toc:
         url: /debugging-restores
       - page: Troubleshoot Restic
         url: /restic#troubleshooting
-  - title: Customize Velero
+  - title: Contribute
     subfolderitems:
       - page: Build from source
         url: /build-from-source
-      - page: Run in any namespace
-        url: /namespace
-      - page: Extend
-        url: /extend
-      - page: Extend with plugins
-        url: /plugins
-      - page: Extend with hooks
-        url: /hooks
+      - page: Run locally
+        url: /run-locally
   - title: More information
     subfolderitems:
       - page: Backup file format
