--- a/site/_data/master-toc.yml
+++ b/site/_data/master-toc.yml
@@ -59,6 +59,8 @@ toc:
         url: /build-from-source
       - page: Run locally
         url: /run-locally
+      - page: Add code
+        url: /add-code
   - title: More information
     subfolderitems:
       - page: Backup file format
