--- a/site/_data/master-toc.yml
+++ b/site/_data/master-toc.yml
@@ -53,6 +53,8 @@ toc:
         url: /restic#troubleshooting
   - title: Contribute
     subfolderitems:
+      - page: Start Contributing
+        url: /start-contributing
       - page: Development
         url: /development
       - page: Build from source
