--- a/site/_data/v1-1-0-toc.yml
+++ b/site/_data/v1-1-0-toc.yml
@@ -55,6 +55,8 @@ toc:
         url: /restic#troubleshooting
   - title: Contribute
     subfolderitems:
+      - page: Start Contributing
+        url: /start-contributing
       - page: Development
         url: /development
       - page: Build from source
