Improve contributing docs (#1852)
Signed-off-by: Carlisia <carlisia@vmware.com>

--- a/site/_data/master-toc.yml
+++ b/site/_data/master-toc.yml
@@ -35,6 +35,12 @@ toc:
         url: /backup-reference
       - page: Restore reference
         url: /restore-reference
+      - page: Run in any namespace
+        url: /namespace
+      - page: Extend with plugins
+        url: /plugins
+      - page: Extend with hooks
+        url: /hooks
   - title: Troubleshoot
     subfolderitems:
       - page: Troubleshooting
@@ -45,18 +51,16 @@ toc:
         url: /debugging-restores
       - page: Troubleshoot Restic
         url: /restic#troubleshooting
-  - title: Customize
+  - title: Contribute
     subfolderitems:
+      - page: Start Contributing
+        url: /start-contributing
+      - page: Development
+        url: /development
       - page: Build from source
         url: /build-from-source
-      - page: Run in any namespace
-        url: /namespace
-      - page: Extend
-        url: /extend
-      - page: Extend with plugins
-        url: /plugins
-      - page: Extend with hooks
-        url: /hooks
+      - page: Run locally
+        url: /run-locally
   - title: More information
     subfolderitems:
       - page: Backup file format
