move plugin proto updating into make update
Signed-off-by: Steve Kriss <krisss@vmware.com>

--- a/hack/build-image/Dockerfile
+++ b/hack/build-image/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright 2018 the Velero contributors.
+# Copyright 2018, 2019 the Velero contributors.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -25,4 +25,17 @@ RUN mkdir -p /go/src/k8s.io && \
     cd /go/src/golang.org/x/tools && \
     git checkout 40a48ad93fbe707101afb2099b738471f70594ec && \
     go install ./cmd/goimports && \
-    echo chmod -R a+w /go
+    echo chmod -R a+w /go && \
+    # download & install protoc
+    apt-get update && apt-get install -y unzip && \
+    wget --quiet https://github.com/protocolbuffers/protobuf/releases/download/v3.9.1/protoc-3.9.1-linux-x86_64.zip && \
+    unzip protoc-3.9.1-linux-x86_64.zip && \
+    mv bin/protoc /usr/bin/protoc && \
+    chmod +x /usr/bin/protoc && \
+    # download & install protoc-gen-go plugin (v1.0.0)
+    mkdir -p /go/src/github.com/golang && \
+    cd /go/src/github.com/golang && \
+    git config --global advice.detachedHead false && \
+    git clone -b v1.0.0 https://github.com/golang/protobuf && \
+    cd /go/src/github.com/golang/protobuf && \
+    go install ./protoc-gen-go
