update other GH org refs to vmware-tanzu
Signed-off-by: Steve Kriss <krisss@vmware.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -52,7 +52,7 @@ checksum:
   name_template: 'CHECKSUM'
 release:
   github:
-    owner: heptio
+    owner: vmware-tanzu
     name: velero
   draft: true
   prerelease: auto
