--- a/.travis.yml
+++ b/.travis.yml
@@ -27,5 +27,5 @@ deploy:
     skip_cleanup: true
     script: hack/gcr-push.sh
     on:
-      repo: vmware-tanzu/velero
+      repo: nrb/velero
       all_branches: true
